cmake_minimum_required(VERSION 3.15)
project(push_swap C)

set(CMAKE_C_STANDARD 99)

add_executable(push_swap.h
        checker.c
        digit_arg.c
        free_arg.c
        ft_atol.c
        ft_putendl.c
        ft_strcat.c
        ft_strchr.c
        ft_strclr.c
        ft_strcpy.c
        ft_strdel.c
        ft_strjoin.c
        ft_strlen.c
        ft_strnew.c
        ft_strsplit.c
        ft_strsub.c
        get_next_line.c
        init_stack.c
        isdigit.c
        sorted.c
        )